# src/index.ts
@@ -2,6 +2,7 @@ import express, { type Request, type Response } from "express";
 import swaggerRouter from "./routes/swagger.router.js";
 import cors from "cors";
 import ProductosRouter from "./routes/productos.routes.js";
+import CustomerRouter from "./routes/clientes.routes.js";
 
 const port = process.env.PORT;
 
@@ -12,6 +13,7 @@ app.use(express.json());
 app.use(cors());
 
 app.use("/api/docs", swaggerRouter);
+app.use("/api/clientes", CustomerRouter);
 app.use("/api/productos", ProductosRouter);
 
 app.get("/", (req: Request, res: Response) => {
